--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "raw-loader": "^3.1.0",
     "react-hot-loader": "^4.12.15",
     "style-loader": "^1.0.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.2",
